<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_calculator"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/Calculator" />

    <TableLayout
        android:id="@+id/tabMode_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:ellipsize="start"
                android:gravity="end"
                android:singleLine="true"
                android:textSize="40sp"
                tools:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end"
                android:textSize="40sp"
                tools:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_Clear"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/clear"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_back"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/back"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_division"
                style="@style/MyButtonStyleCalculator"
                android:layout_column="3"
                android:text="@string/division"
                app:cornerRadius="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_7"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_8"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_8"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_9"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_9"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/multiply"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_4"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_4"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_5"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_5"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_6"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_6"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_plus"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/plus"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_1"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_2"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_2"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_3"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/_3"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_minus"
                style="@style/MyButtonStyleCalculator"
                android:text="@string/minus"
                app:cornerRadius="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_0"
                style="@style/MyButtonStyleCalculator"
                android:layout_column="1"
                android:text="@string/_0"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button_equally"
                style="@style/MyButtonStyleCalculator"
                android:layout_column="3"
                android:text="@string/equally"
                app:cornerRadius="10dp" />

        </TableRow>
    </TableLayout>
</LinearLayout>